--- a/study01-html-css/SosukeKozawa/css/hamburgerAnimation.css
+++ b/study01-html-css/SosukeKozawa/css/hamburgerAnimation.css
@@ -26,16 +26,16 @@
 }
 
 
-#div_indexpage_hamburger_≡.viewable>div:nth-child(2) {
+#div_indexpage_hamburger_≡.viewable>span:nth-child(2) {
     animation: hamburger_≡_view 0.3s;
     animation-delay: 0s;
 }
 
-#div_indexpage_hamburger_≡.viewable>div:nth-child(3) {
+#div_indexpage_hamburger_≡.viewable>span:nth-child(3) {
     animation: hamburger_≡_view 0.4s;
 }
 
-#div_indexpage_hamburger_≡.viewable>div:nth-child(4) {
+#div_indexpage_hamburger_≡.viewable>span:nth-child(4) {
     animation: hamburger_≡_view 0.5s;
 }
 
