--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5,8 +5,8 @@ html {}
 body {
     background-color: #e6e2d7;
     color: #000;
-    font-family: 'YuMincho', 'Yu Mincho', '游明朝体', 'Yu Mincho Light', 'ヒラギノ明朝 ProN', 'Hiragino Mincho ProN', "Noto Serif JP", 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'メイリオ', "Meiryo", sans-serif;
-    /* font-family: "Noto Serif JP", serif; */
+    font-family: 'YuMincho', 'Yu Mincho', '游明朝体', 'Yu Mincho Light', 'ヒラギノ明朝 ProN', 'Hiragino Mincho ProN', "Noto Serif JP", 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'メイリオ', "Meiryo", "Noto Serif JP", serif;
+/*     font-family:  "Noto Serif JP", serif; */
     width: 100%;
     /* 勝手に折り返すのを禁止する */
     word-break: keep-all;
